--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./css/global.css">
 
-    <title>Document</title>
+    <title>Trafalgar</title>
 
 </head>
 
@@ -43,9 +43,11 @@
                         healthcare, accessible on mobile and online
                         for everyone
                     </p>
-                    <button class="firstbutton">
-                        Consult today
-                    </button>
+                    <div class="buttondiv">
+                        <button class="firstbutton">
+                            Consult today
+                        </button>
+                    </div>
                 </div>
                 <img class="illustration" src="./images/illusration.svg" alt="trafalgarillustration">
             </section>
@@ -250,10 +252,10 @@
                     Company
                 </div>
 
-                <a href="">About</a>
-                <a href="">Testimanials</a>
-                <a href="">Find a doctor</a>
-                <a href="">Apps</a>
+                <a href="#">About</a>
+                <a href="#">Testimanials</a>
+                <a href="#">Find a doctor</a>
+                <a href="#">Apps</a>
 
             </div>
             <div class="footer3">
@@ -261,10 +263,10 @@
                     Region
                 </div>
 
-                <a href="">Indonesia</a>
-                <a href="">Singapore</a>
-                <a href="">Hongkong</a>
-                <a href="">Canada</a>
+                <a href="#">Indonesia</a>
+                <a href="#">Singapore</a>
+                <a href="#">Hongkong</a>
+                <a href="#">Canada</a>
 
             </div>
             <div class="footer4">
@@ -272,10 +274,10 @@
                     Help
                 </div>
 
-                <a href="">Help center</a>
-                <a href="">Contact support</a>
-                <a href="">Instructions</a>
-                <a href="">How it work</a>
+                <a href="#">Help center</a>
+                <a href="#">Contact support</a>
+                <a href="#">Instructions</a>
+                <a href="#">How it work</a>
 
             </div>
         </div>
