button icons added

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                     </p>
                     <button>
                         Download
+                        <img class="downicon" src="./images/Vector.png" alt="icon">
                     </button>
                 </div>
                 <img src="./images/illustration3.svg" alt="illustration3">
@@ -191,6 +192,7 @@
                         </p>
                         <a href="#">
                             Read more
+                            <img src="./images/Vector right.png" alt="icon">
                         </a>
                     </div>
                     <div class="checkoutcard">
@@ -204,10 +206,11 @@
                         </p>
                         <a href="#">
                             Read more
+                            <img class="downicon" src="./images/Vector right.png" alt="icon">
                         </a>
                     </div>
                     <div class="checkoutcard">
-                        <img src="./images/checkout3.svg" alt="checkout">
+                        <img class="downicon" src="./images/checkout3.svg" alt="checkout">
                         <h5>
                             Natural care for healthy
                             facial skin
@@ -218,6 +221,7 @@
                         </p>
                         <a href="#">
                             Read more
+                            <img class="downicon" src="./images/Vector right.png" alt="icon">
                         </a>
                     </div>
 
